# trainee-tasks

./: ariProg.c  average2_f.c  average_f.c  countdown.c  crypt.c  div2.c  div3.c  divN.c  even.c  groups  isEven.c  isMultiple.c  isOdd.c  isPrime_f.c  max2.c  max4.c  maxN.c  minN.c  multiple3.c  multiple5.c  multipleN.c  nextMultiple.c  odd.c  odd2.c  pascal.c  powerOf2.c  powerOfX.c  prevMultiple.c  prime.c  project.config  pyramid2rev.c  task1.c  task2.c
C_tasks/: ariProg.c  average2_f.c  average_f.c  countdown.c  crypt.c  div2.c  div3.c  divN.c  even.c  even2.c  isEven.c  isMultiple.c  isOdd.c  isPrime_f.c  max2.c  max4.c  maxN.c  minN.c  multiple3.c  multiple5.c  multipleN.c  nextMultiple.c  odd.c  odd2.c  pascal.c  powerOf2.c  powerOfX.c  prevMultiple.c  prime.c  pyramid.c  pyramid1.c  pyramid1rev.c  pyramid2.c  pyramid2rev.c  square1.c  square2.c  square2rev.c
c++_pack_1/: ariProg.cpp  ariProg.h  ariProgClient.cpp  complex.cpp  complex.h  complexClient.cpp  date.cpp  date.h  dateClient.cpp  fibonacci.cpp  fibonacci.h  fibonacciClient.cpp  passport.cpp  passport.h  passportClient.cpp  prime.cpp  prime.h  primeClient.cpp  vector.cpp  vector.h  vectorClient.cpp
c++_pack_2/army/: CMakeLists.txt  README.txt
c++_pack_2/army/Include/: archer.h  caster.h  category.h  entity.h  healer.h  helpers.h  mage.h  skeleton.h  teamfight.h  vampire.h  warlock.h  warrior.h
c++_pack_2/army/Source/: archer.cpp  caster.cpp  entity.cpp  healer.cpp  helpers.cpp  mage.cpp  main.cpp  skeleton.cpp  teamfight.cpp  test.cpp  vampire.cpp  warlock.cpp  warrior.cpp
c++_tasks_pack_1/: ariProg.cpp  ariProg.h  complex.cpp  complex.h  date.cpp  date.h  date_test.cpp  fibonacci.cpp  fibonacci.h  passport.cpp  passport.h  prime.cpp  prime.h  vector.cpp  vector.h
c++_tasks_pack_2/army/: CMakeLists.txt  archer.cpp  archer.h  army.cpp  colors.h  creature.cpp  creature.h  creatureextrastats.cpp  creatureextrastats.h  mage.cpp  mage.h  main.cpp  necromancer.cpp  necromancer.h  priest.cpp  priest.h  skeleton.cpp  skeleton.h  spellbook.cpp  spellbook.h  spells.cpp  spells.h  vampire.cpp  vampire.h  warrior.cpp  warrior.h
c++_tasks_pack_2/army/Spells/: fireball.cpp  fireball.h  heal.cpp  heal.h  spell.h  summonSkeleton.cpp  summonSkeleton.h
c++_tasks_pack_2/army/Units/: archer.cpp  archer.h  armyException.h  mage.cpp  mage.h  magicUnit.cpp  magicUnit.h  priest.cpp  priest.h  skeleton.cpp  skeleton.h  unit.cpp  unit.h  vampire.cpp  vampire.h  warlock.cpp  warlock.h  warrior.cpp  warrior.h
c++_tasks_pack_2/shop/: CMakeLists.txt  Category.cpp  Category.h  Customer.cpp  Customer.h  Item.cpp  Item.h  Order.cpp  Order.h  README.md  ShopException.h  Stats.cpp  Stats.h  category.cpp  category.h  customer.cpp  customer.h  item.cpp  item.h  listable.cpp  listable.h  main.cpp  order.cpp  order.h  shopexception.cpp  shopexception.h
c_tasks_2/: abs.c  arrayExchange_f.c  arrayShiftLeft_f.c  base2.c  divMN.c  lowerCase.c  rot13.c  sequenceLen.c  sliceReverse_f.c  strReverse.c
c_tasks_3/: Complex.c  Vector.c  arrayMerge_f.c  arrayShift_f.c  arrayUnique_f.c  cards.c
c_tasks_library/: CMakeLists.txt  README.txt
c_tasks_library/simple_c_library/: CMakeLists.txt
c_tasks_library/simple_c_library/Include/: simple_c_library.h
c_tasks_library/simple_c_library/Source/: simple_c_library.c
c_tasks_library/simple_c_library_2/: CMakeLists.txt
c_tasks_library/simple_c_library_2/Include/: simple_c_library_2.h
c_tasks_library/simple_c_library_2/Source/: simple_c_library_2.c
c_tasks_library/testing/: CMakeLists.txt  testing.c
c_tasks_pack_1/: ariProg.c  average2_f.c  odd.c  (+34 more)
thread_safe_memory_sharing_library/: CMakeLists.txt  README.txt
thread_safe_memory_sharing_library/memory_manager_library/Include/: memory_manager_library.h
thread_safe_memory_sharing_library/memory_manager_library/Source/: memory_manager_library.cpp
thread_safe_memory_sharing_library/testing/: CMakeLists.txt
(+76 files in other folders)
